force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/vlocity_cmt__PaymentPlan__c.object-meta.xml
<CustomObject>
    <description>Payment plan for the account.</description>
    <label>Payment Plan</label>
    <nameField>
        <label>Payment Plan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>