force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <description>Account ID associated with the payment plan</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>PaymentPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>