force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__AmountRemaining__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AmountRemaining__c</fullName>
    <description>Amount remaining in the payment plan at a given point in time</description>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>