force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__DeactivationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DeactivationDate__c</fullName>
    <description>Date the payment plan was deactivated.</description>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>