force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__NumberOfInstallments__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfInstallments__c</fullName>
    <description>Number of installments within the payment plan.</description>
    <label>Number of Installments</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>