force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__OpenAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OpenAmount__c</fullName>
    <description>Amount remaining unpaid when the payment plan is deactivated.</description>
    <label>Open Amount at Deactivation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>