force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the payment method to use when taking payments for this payment plan.</description>
    <label>Payment Method</label>
    <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>PaymentPlans</relationshipName>
    <type>Lookup</type>
</CustomField>