force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__PaymentPlanAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentPlanAmount__c</fullName>
    <description>Total amount included in the payment plan.</description>
    <label>Payment Plan Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>