force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__Reason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Reason__c</fullName>
    <description>Reason for establishing the payment plan.</description>
    <label>Payment Plan Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer cannot pay</fullName>
            </value>
            <value>
                <fullName>Amount in dispute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>