force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__StartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StartDate__c</fullName>
    <description>Date the payment plan starts.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>