force-app/main/default/objects/vlocity_cmt__PaymentPlan__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>